package edu.fiuba.algo3.modelo;

public class Turno {
	int turno;

    public Turno() {
        this.turno = 1;
    }

    public void pasar(Mapa mapa, Jugador jugador) {
        
    }
}
